# trigteq-newsletter

./: .dockerignore  Dockerfile  Makefile  README.md  agent_tools.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/newsletter/: logger_settings.py
src/newsletter/agent/: agent.py
src/newsletter/schemas/: majors.py  output_models.py
src/newsletter/service/: main.py
src/newsletter/tools/: agent_tools.py  fetchers.py  parsers.py
